fix(language selector): positionning and readability

--- a/css/style.css
+++ b/css/style.css
@@ -8958,15 +8958,15 @@ a.a2a_i, i.a2a_i {
         box-shadow: none; }
     /* line 62, ../scss/fxj/_language-selector.scss */
     .block-dropdown-language .dropdown .language-link {
-      font-weight: 300; }
-    /* line 65, ../scss/fxj/_language-selector.scss */
+      font-weight: 300;
+      margin: .5rem 0; }
+    /* line 66, ../scss/fxj/_language-selector.scss */
     .block-dropdown-language .dropdown .dropdown-menu {
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-      background-color: rgba(255, 255, 255, 0.9);
       border: 0;
       border-radius: 0;
       min-width: 6.5em;
-      transform: translateY(-6.5em); }
+      transform: translateY(-7em); }
       /* line 73, ../scss/fxj/_language-selector.scss */
       .block-dropdown-language .dropdown .dropdown-menu .language-link {
         background-color: transparent; }
